# mneme

./: .gitignore  CHANGELOG.md  DELIVERY.md  README.md  SECURITY.md  mneme.interop.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-21-mneme-crucible-export.md
examples/: tour.py
src/mneme/: __init__.py  bench.py  cli.py  compose.py  consolidate.py  drift.py  embed.py  entity.py  extract.py  ingest.py  inspect.py  llm_extract.py  mcp.py  memory.py  recall.py  receipt.py  replay.py  scenario.py  schema.py  store.py  temporal.py
tests/: test_audit_integrity.py  test_bench.py  test_compose.py  test_consolidate.py  test_crucible_replay.py  test_drift_content.py  test_embed.py  test_entity.py  test_forget.py  test_ingest.py  test_inspect.py  test_llm_extract.py  test_mneme.py  test_multiuser.py  test_provenance_grounding.py  test_recall_receipt.py  test_recency.py  test_scenario_mcp.py  test_scope_isolation.py  test_temporal.py  test_tour.py  test_union_and_migration.py  test_verify_recall.py
