[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme-memory"
version = "0.1.0"
description = "Accountable agent memory: 4-tier layered memory + hybrid retrieval, where every memory carries provenance, every recall is re-derivable, and every stale memory flags its own drift. Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["agent-memory", "llm-memory", "long-term-memory", "provenance", "retrieval", "bm25", "rag"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
mneme = "mneme.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/mneme"

[tool.setuptools.packages.find]
where = ["src"]
